Fix generic slug alignment issue - Fix generic slug alignment issue on mobile

--- a/BikeWale.UI/m/css/content/details.css
+++ b/BikeWale.UI/m/css/content/details.css
@@ -272,45 +272,6 @@
 .carousel-stage-videos .yt-iframe-preview iframe { width:100%; height:200px; }
 .bw-tabs-panel .horizontal-tabs-wrapper.hide { display: none }
 
-/* model-more-info-section */
-.model-more-info-section .item-image-content {
-    width: 100px;
-    height: 56px;
-    display: inline-block;
-    background: url(https://imgd1.aeplcdn.com/0x0/bw/static/sprites/m/circleloader.gif) no-repeat center;
-}
-
-.item-image-content img {
-    width: 100%;
-}
-
-.model-more-info-section .bike-details-block {
-    width: 66%;
-    padding-left: 10px;
-}
-
-.model-more-info-section .used-target-label {
-    width: 96%;
-}
-
-.price-label-size-12 {
-    font-size: 12px;
-    color: #82888b;
-}
-
-.price-value-size-18 {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.inr-12-grey {
-    width: 8px;
-    height: 10px;
-    background-position: -102px -137px;
-    position: relative;
-    top: 1px;
-}
-
 /* model-slug-type-news */
 .model-slug-type-news {
     border: 1px solid #a0d9e1;
@@ -326,108 +287,12 @@
     font-size: 16px;
 }
 
-.model-slug-type-news .inr-sm-icon {
-    -webkit-transform: scale(0.9);
-    -moz-transform: scale(0.9);
-    -o-transform: scale(0.9);
-    transform: scale(0.9);
-    position: relative;
-    top: 1px;
-}
-
-/* more info list */
-.item-more-details-list li {
-    float: left;
-    margin-bottom: 8px;
-    margin-right: 8px;
-}
-
-.item-more-details-list a:hover {
-    color: #fff;
-    background: #54bbca;
-}
-
-.item-more-details-list a {
-    display: block;
-    padding: 1px 10px 5px;
-    color: #787878;
-    background: rgba(245, 245, 245, 0.9);
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    border-radius: 2px;
-}
-
-.item-more-details-list a:hover {
-    text-decoration: none;
-}
-
-.item-more-details-list .icon-label {
-    font-size: 13px;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 13px;
-}
-
-.next-grey-icon {
-    width: 8px;
-    height: 13px;
-    background-position: -182px -393px;
-    vertical-align: middle;
-}
-
-/* generic icons */
-.reviews-sm,
-.news-sm,
-.specs-sm {
-    width: 14px;
-    height: 14px;
-    vertical-align: middle;
-    margin-right: 3px;
-}
-
-.reviews-sm {
-    background-position: -77px -555px;
-}
-
-.news-sm {
-    background-position: -109px -555px;
-}
-
-.specs-sm {
-    background-position: -141px -555px;
-}
-
-.item-more-details-list a:hover .reviews-sm {
-    background-position: -93px -555px;
-}
-
-.item-more-details-list a:hover .news-sm {
-    background-position: -125px -555px;
-}
-
-.item-more-details-list a:hover .specs-sm {
-    background-position: -157px -555px;
-}
-
-.item-more-details-list a:hover .photos-sm {
-    background-position: 0 -493px;
-}
-
-.item-more-details-list a:hover .videos-sm {
-    background-position: -16px -492px;
-}
-
 @media screen and (max-width: 320px) {
     #bike-gallery-popup .stage-photos, #bike-gallery-popup .stage-videos { margin-bottom: 0; }
     .carousel-stage-videos .yt-iframe-preview iframe { height:180px; }
 
     .model-more-info-section.model-slug-type-news .bike-details-block {
         width: 58%;
-    }
-
-    .model-more-info-section .used-target-label {
-        width: 93%;
     }
 }
 
